--- a/themes/bene_parent/sass/config/_01.vars.scss
+++ b/themes/bene_parent/sass/config/_01.vars.scss
@@ -484,7 +484,7 @@ $vars: (
 }
 
 %sub-nav-menu-links{
-  margin: 0 1rem;
+  margin: 0 22px;
 }
 
 %sub-nav-menu-links-active{
